Mysqli, intent,contact,send report

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
         <activity android:name=".CrimeListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".CrimePagerActivity">
+        <activity android:name=".CrimePagerActivity"
+                    android:parentActivityName=".CrimeListActivity">
         </activity>
     </application>
 
